WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176132
REGRESSION (
r221068
): Graphics corruption when dragging images on iOS
https://bugs.webkit.org/show_bug.cgi?id=176132
Summary
REGRESSION (r221068): Graphics corruption when dragging images on iOS
Tim Horton
Reported
2017-08-30 16:01:24 PDT
REGRESSION (
r221068
): Graphics corruption when dragging images on iOS
Attachments
Patch
(2.27 KB, patch)
2017-08-30 16:01 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-08-30 16:01:43 PDT
Created
attachment 319417
[details]
Patch
Tim Horton
Comment 2
2017-08-30 16:02:15 PDT
<
rdar://problem/34142983
>
WebKit Commit Bot
Comment 3
2017-08-30 16:43:43 PDT
Comment on
attachment 319417
[details]
Patch Clearing flags on attachment: 319417 Committed
r221407
: <
http://trac.webkit.org/changeset/221407
>
WebKit Commit Bot
Comment 4
2017-08-30 16:43:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug