REGRESSION (r221068): Graphics corruption when dragging images on iOS https://bugs.webkit.org/show_bug.cgi?id=176132 <rdar://problem/34142983>

Reviewed by Dean Jackson.

* Shared/mac/ColorSpaceData.mm:
(WebKit::ColorSpaceData::encode):
Color space encoding was entirely disabled on iOS, so after r221068,
ShareableBitmap would make different decisions about image format
on both sides of the wire.

Enable color space encoding on iOS (decoding is already implemented)
by moving some ifdefs around.


Canonical link: https://commits.webkit.org/192810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221407 268f45cc-cd09-0410-ab3c-d52691b4dbfc