Source/WebKit/Shared/mac/ColorSpaceData.mm
@@ -40,7 +40,6 @@ enum EncodedDataType {
 
 void ColorSpaceData::encode(IPC::Encoder& encoder) const
 {
-#if !PLATFORM(IOS)
     if (cgColorSpace) {
         // Try to encode the name.
         if (RetainPtr<CFStringRef> name = adoptCF(CGColorSpaceCopyName(cgColorSpace.get()))) {
@@ -50,7 +49,7 @@ void ColorSpaceData::encode(IPC::Encoder& encoder) const
         }
 
         // Failing that, just encode the ICC data.
-#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200
+#if (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200) || PLATFORM(IOS)
         RetainPtr<CFDataRef> profileData = adoptCF(CGColorSpaceCopyICCData(cgColorSpace.get()));
 #else
         RetainPtr<CFDataRef> profileData = adoptCF(CGColorSpaceCopyICCProfile(cgColorSpace.get()));
@@ -61,7 +60,6 @@ void ColorSpaceData::encode(IPC::Encoder& encoder) const
             return;
         }
     }
-#endif // !PLATFORM(IOS)
 
     // The color space was null or failed to be encoded.
     encoder.encodeEnum(Null);
